--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,5 +13,6 @@
         {% endfor %}
       </ul>
     </div>
+	<span>Text: Security benchmarking and ROI analytics without own-data disclosure</span>
   </div>
 </nav>
