--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,6 +13,7 @@
         {% endfor %}
       </ul>
     </div>
-	<span>Text: Security benchmarking and ROI analytics without own-data disclosure</span>
+	<div class="container">
+	<span>Text: Security benchmarking and ROI analytics without own-data disclosure</span></div>
   </div>
 </nav>
