--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,8 +12,9 @@
           </li>
         {% endfor %}
       </ul>
+	  <span>Text: Security benchmarking and ROI analytics without own-data disclosure</span>
     </div>
-	<div class="container">
-	<span>Text: Security benchmarking and ROI analytics without own-data disclosure</span></div>
+	
+	
   </div>
 </nav>
