--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -2460,8 +2460,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #f4623a;
-  border-color: #f4623a;
+  background-color: #a82d41;
+  border-color: #a82d41;
 }
 .btn-primary:hover {
   color: #fff;
@@ -9962,7 +9962,7 @@ html {
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
-  border-color: #f4623a;
+  border-color: #a82d41;
 }
 
 hr.light {
