--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10051,7 +10051,7 @@ hr.light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(247, 247, 247, 0.27) 0%, rgba(115, 117, 117, 0.8) 100%), url("../img/bg-hero.jpg");
+  background: linear-gradient(to bottom, rgba(247, 247, 247, 0.27) 0%, rgba(115, 117, 117, 0.8) 100%), url("../img/bg-clienthero.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
