--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -6070,7 +6070,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #f4623a !important;
+  background-color: #fff !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -10003,7 +10003,7 @@ hr.light {
   font-size: 0.9rem;
   padding: 0.75rem 0;
 }
-#mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
+#mainNav .navbar-nav .nav-item .nav-link:hover, {
   color: #a82d41;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active {
@@ -10052,7 +10052,7 @@ header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
   background: linear-gradient(to bottom, rgba(247, 247, 247, 0.27) 0%, rgba(115, 117, 117, 0.8) 100%), url("../img/bg-clienthero.jpg");
-  background-position: center;
+  background-position: top center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
