--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -6070,7 +6070,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #fff !important;
+  background-color: #a82d41 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
