--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10004,7 +10004,7 @@ hr.light {
   padding: 0.75rem 0;
 }
 #mainNav .navbar-nav .nav-item .nav-link:hover, {
-  color: #a82d41;
+  color: #a82d41 !important;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active {
   color: #a82d41 !important;
