--- a/_includes/servicesnew.html
+++ b/_includes/servicesnew.html
@@ -1,31 +1,25 @@
+
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
-  <div class="container">
-    <h2 class="text-center mt-0">{{ section.title }}</h2>
-    <hr class="divider my-4">
-    <div class="row justify-content-center">
-      <!-- {#% assign cols = section.services.size | at_most: 4 %#} -->
-      {% assign cols = section.services.size %}
-      {% if cols > 4 %}
-        {% assign cols = 4 %}
-      {% endif %}
+      <div class="container">
+	  <h2 class="text-center mt-0">{{ section.title }}</h2>
+	      <hr class="divider my-4">
+        <div class="row">
+          <div class="col-lg-6 about-img">
+            <img src="assets/img/bg-mastheadhero.jpg" alt="">
+          </div>
 
-      {% assign colsL = 12 | divided_by: cols %}
-      {% assign colsM = colsL | times: 2 %}
+          <div class="col-lg-6 content">
+            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing</h2>
+            <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
 
-      {% for service in section.services %}
-      <div class="col-lg-{{ colsL }} col-md-{{ colsM }} text-center">
-        <div class="mt-5">
-          <i class="fas fa-4x {{ service.icon }} text-primary mb-4"></i>
-          <h3 class="h4 mb-2">{{ service.title }}</h3>
-          <div class="text-muted mb-0">
-            {{ service.text | markdownify }}
-            {% if service.url %}
-              <a href="{{ service.url }}"><i class="fas fa-link"></i></a>
-            {% endif %}
+            <ul>
+              <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+              <li><i class="ion-android-checkmark-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+              <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+            </ul>
+
           </div>
         </div>
+
       </div>
-      {% endfor %}
-    </div>
-  </div>
-</section>
+    </section>
