--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10058,6 +10058,7 @@ header.masthead {
   background-size: cover;
 }
 header.masthead h1 {
+  text-shadow: 1px 1px 3px #000;
   font-size: 2.25rem;
 }
 @media (min-width: 992px) {
