--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,15 +1,17 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
   <div class="container">
-    <h2 class="text-center mt-0">{{ section.title }}</h2>
-    <hr class="divider my-4">
+
     <div class="row justify-content-center">
+	    <h2 class="text-center mt-0">{{ section.title }}</h2>
+    <hr class="divider my-4">
+	
       <!-- {#% assign cols = section.services.size | at_most: 4 %#} -->
       {% assign cols = section.services.size %}
       {% if cols > 4 %}
         {% assign cols = 4 %}
       {% endif %}
 
-      {% assign colsL = 12 | divided_by: cols %}
+      {% assign colsL = 12 | divided_by: cols %}.
       {% assign colsM = colsL | times: 2 %}
 
       {% for service in section.services %}
