--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,20 +1,12 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
   <div class="container">
-    <h2 class="text-center mt-0">{{ section.title }}</h2>
-    <hr class="divider my-4">
+
     <div class="row justify-content-center">
-      <!-- {#% assign cols = section.services.size | at_most: 4 %#} -->
-      {% assign cols = section.services.size %}
-      {% if cols > 4 %}
-        {% assign cols = 4 %}
-      {% endif %}
-
-      {% assign colsL = 12 | divided_by: cols %}
-      {% assign colsM = colsL | times: 2 %}
-
-      {% for service in section.services %}
-      <div class="col-lg-{{ colsL }} col-md-{{ colsM }} text-center">
-        <div class="mt-5">
+ 
+      <div class="col">
+	      <h2 class="text-center mt-0">{{ section.title }}</h2>
+    <hr class="divider my-4">
+        <div class="col">
           <i class="fas fa-4x {{ service.icon }} text-primary mb-4"></i>
           <h3 class="h4 mb-2">{{ service.title }}</h3>
           <div class="text-muted mb-0">
