--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,17 +4,19 @@
     <div class="row justify-content-center">
  
       <div class="col">
-	      <h2 class="text-center mt-0">{{ section.title }}</h2>
-    <hr class="divider my-4">
+	  <img class="img-fluid" src="assets/img/portfolio/thumbnails/{{ proj.icon }}" alt="">
+	      
         <div class="col">
+		<h2 class="text-center mt-0">{{ section.title }}</h2>
+    <hr class="divider my-4">
           <i class="fas fa-4x {{ service.icon }} text-primary mb-4"></i>
           <h3 class="h4 mb-2">{{ service.title }}</h3>
-          <div class="text-muted mb-0">
+          
             {{ service.text | markdownify }}
             {% if service.url %}
               <a href="{{ service.url }}"><i class="fas fa-link"></i></a>
             {% endif %}
-          </div>
+          
         </div>
       </div>
     </div>
