--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
     <div class="row justify-content-center">
  
       <div class="col">
-	  <img class="img-fluid" src="assets/img/portfolio/thumbnails/{{ proj.icon }}" alt="">
+	  <img class="img-fluid" src="assets/img/{{ proj.icon }}" alt="">
 	      
         <div class="col">
 		<h2 class="text-center mt-0">{{ section.title }}</h2>
