--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,5 +1,14 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
   <div class="container">
+  <div class="row">
+    <div class="col">
+      1 of 2
+    </div>
+    <div class="col">
+      2 of 2
+    </div>
+  </div>
+  <div class="container">
 
     <div class="row justify-content-center">
  
