--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,11 +2,16 @@
   <div class="container">
   <div class="row">
     <div class="col">
-     <img class="img-fluid" src="assets/img/{{ proj.icon }}" alt="">
+     <img class="img-fluid" src="assets/img/bg-mastheadhero.jpg" alt="">
     </div>
     <div class="col">
      <h2 class="text-center mt-0">{{ section.title }}</h2>
     <hr class="divider my-4">
+	 <h3 class="h4 mb-2">{{ service.title }}</h3>
+	 {{ service.text | markdownify }}
+            {% if service.url %}
+              <a href="{{ service.url }}"><i class="fas fa-link"></i></a>
+            {% endif %}
     </div>
   </div>
   <div class="container">
