--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,10 +2,11 @@
   <div class="container">
   <div class="row">
     <div class="col">
-     <img class="img-fluid" src="assets/img/{{ proj.icon }}" alt="">
+     <img class="img-fluid" src="assets/img/{{ services.icon }}" alt="">
     </div>
     <div class="col">
-      2 of 2
+     <h2 class="text-center mt-0">{{ section.title }}</h2>
+    <hr class="divider my-4">
     </div>
   </div>
   <div class="container">
