--- a/_includes/services.html
+++ b/_includes/services.html
@@ -6,6 +6,7 @@
 	<img class="img-fluid" src="assets/img/{{ serv.icon }}" alt="">
     1 of 2
     </div>
+	{% endfor %}
     <div class="col">
       2 of 2
     </div>
