--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,10 +3,10 @@
   <div class="row row-cols-2">
   {% for serv in section.services %}
     <div class="col">
-	<img class="img-fluid" src="assets/img/{{ serv.icon }}" alt="">
+	<img class="img-fluid" src="assets/img/services/{{ serv.icon }}" alt="">
     1 of 2
     </div>
-	{% endfor %}
+	{% endfor %} 
     <div class="col">
       2 of 2
     </div>
