--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,12 +1,12 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
   <div class="container">
   <div class="row row-cols-2">
-  {% for serv in section.services %}
+
     <div class="col">
-	<img class="img-fluid" src="assets/img/services/{{ serv.icon }}" alt="">
+	<img class="img-fluid" src="assets/img/services/service-1.jpg" alt="">
     1 of 2
     </div>
-	{% endfor %} 
+
     <div class="col">
       2 of 2
     </div>
