--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,11 +4,12 @@
 
     <div class="col">
 	<img class="fa fa-4x text-primary" src="{{ ser.image }}" alt="{{ ser.title }}">
-    1 of 2
+   
     </div>
 
     <div class="col">
-      2 of 2
+      <h2 class="text-center mt-0">{{ section.title }}</h2>
+    <hr class="divider my-4">
     </div>
   </div>
  
