--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,7 +3,7 @@
   <div class="row row-cols-2">
 
     <div class="col">
-	<img class="fa fa-4x text-primary" src="{{ ser.image }}" alt="{{ ser.title }}">
+	<img class="img-fluid" src="assets/img/services/service-1.jpg" alt="">
     1 of 2
     </div>
 
