--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,10 +3,10 @@
   <div class="row row-cols-2">
 
     <div class="col">
-	<img class="img-fluid" src="assets/img/services/{{ serv.icon }}" alt="">
+	<img class="fa fa-4x text-primary" src="{{ ser.image }}" alt="{{ ser.title }}">
     1 of 2
     </div>
-	
+
     <div class="col">
       2 of 2
     </div>
