--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,15 +1,31 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
   <div class="container">
-  <div class="row row-cols-2">
+    <h2 class="text-center mt-0">{{ section.title }}</h2>
+    <hr class="divider my-4">
+    <div class="row justify-content-center">
+      <!-- {#% assign cols = section.services.size | at_most: 4 %#} -->
+      {% assign cols = section.services.size %}
+      {% if cols > 4 %}
+        {% assign cols = 4 %}
+      {% endif %}
 
-    <div class="col">
-	<img class="fa fa-4x text-primary" src="{{ services.image }}" alt="{{ services.title }}">
-    1 of 2
-    </div>
+      {% assign colsL = 12 | divided_by: cols %}
+      {% assign colsM = colsL | times: 2 %}
 
-    <div class="col">
-      2 of 2
+      {% for service in section.services %}
+      <div class="col-lg-{{ colsL }} col-md-{{ colsM }} text-center">
+        <div class="mt-5">
+          <i class="fas fa-4x {{ service.icon }} text-primary mb-4"></i>
+          <h3 class="h4 mb-2">{{ service.title }}</h3>
+          <div class="text-muted mb-0">
+            {{ service.text | markdownify }}
+            {% if service.url %}
+              <a href="{{ service.url }}"><i class="fas fa-link"></i></a>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+      {% endfor %}
     </div>
   </div>
- 
 </section>
