--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
 
       {% for service in section.services %}
       <div class="col">
-        
+        <img class="fa fa-4x text-primary" src="{{ service.image }}" alt="{{ service.title }}">
           <i class="fas fa-4x {{ service.icon }} text-primary mb-4"></i>
 		  <div class="col">
           <h3 class="h4 mb-2">{{ service.title }}</h3>
