--- a/_includes/services.html
+++ b/_includes/services.html
@@ -18,10 +18,10 @@
 		  <div class="col">
           <h3 class="h4 mb-2">{{ service.title }}</h3>
           <div class="col">
-            {{ service.text | markdownify }}
-            {% if service.url %}
-              <a href="{{ service.url }}"><i class="fas fa-link"></i></a>
-            {% endif %}
+		  <ul>
+            <li>{{ service.text1 | markdownify }}</li>
+			<li>{{ service.text2 | markdownify }}</li>
+           </ul>
           </div>
         </div>
       </div>
