--- a/_includes/services.html
+++ b/_includes/services.html
@@ -20,6 +20,7 @@
           <div class="col">
 		  <ul>
             <li>{{ service.text1 | markdownify }}</li>
+			<li>{{ service.text2 | markdownify }}</li>
            </ul>
           </div>
         </div>
