--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,7 @@
       {% assign colsM = colsL | times: 2 %}
 
       {% for service in section.services %}
-      <div class="col">
+      <div class="col serviceshome">
           <i class="fas fa-4x {{ service.icon }} text-primary mb-4"></i>
 		  <div class="col">
           <h3 class="h4 mb-2">{{ service.title }}</h3>
