--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,7 +1,7 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
   <div class="container">
     
-    <div class="row row-cols-2 ">
+    <div class="row row-cols-2 serviceshomecol">
       <!-- {#% assign cols = section.services.size | at_most: 4 %#} -->
       {% assign cols = section.services.size %}
       {% if cols > 2 %}
