--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10119,3 +10119,11 @@ header.masthead h1 {
 
 .text-white-75 {
   color: #fff;}
+ .serviceshomecol::after{
+ box-sizing:border-box;
+ margin:5px;}
+ .serviceshome {
+    border: 1px solid #a82d41;
+    padding: 50px;
+}
+ }
