--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10124,8 +10124,8 @@ header.masthead h1 {
  box-sizing:border-box;
  margin:5px;}
  
-.col.serviceshome {
+.serviceshome {
     border: 1px solid #a82d41;
     padding: 50px;
 }
- }
+ 
