--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10125,7 +10125,7 @@ header.masthead h1 {
  margin:5px;}
  
 .serviceshome {
-    border: 1px solid #a82d41;
+    border: 1px solid #a82d41 !important;
     padding: 50px;
 }
  
