--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -9775,11 +9775,11 @@ a.text-success:hover, a.text-success:focus {
 }
 
 .text-info {
-  color: #17a2b8 !important;
+  color: #a82d41 !important;
 }
 
 a.text-info:hover, a.text-info:focus {
-  color: #0f6674 !important;
+  color: #a82d41 !important;
 }
 
 .text-warning {
