--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10121,7 +10121,7 @@ header.masthead h1 {
   color: #fff;}
   
  
-divider.serviceshome {
+div.serviceshome {
     border: 1px solid #a82d41 !important;
     padding: 30px;
 	margin:-15px;
