--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10121,9 +10121,8 @@ header.masthead h1 {
   color: #fff;}
   
  
-div.serviceshome {
-    border: 1px solid #a82d41 !important;
-    padding: 30px;
-	margin:-15px;
+.serviceshome {
+    border-left: 5px solid #a82d41;
+    padding: 20px;
 }
  
