--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -6100,7 +6100,7 @@ button.bg-success:focus {
 }
 
 .bg-info {
-  background-color: #17a2b8 !important;
+  background-color: #eaeaea !important;
 }
 
 a.bg-info:hover, a.bg-info:focus,
