--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10018,14 +10018,14 @@ hr.light {
     color: rgba(255, 255, 255, 0.7);
   }
   #mainNav .navbar-brand:hover {
-    color: #fff;
+    color: #a82d41;
   }
   #mainNav .navbar-nav .nav-item .nav-link {
     color: #737575;
     padding: 0 1rem;
   }
   #mainNav .navbar-nav .nav-item .nav-link:hover {
-    color: #fff;
+    color: #a82d41;
   }
   #mainNav .navbar-nav .nav-item:last-child .nav-link {
     padding-right: 0;
@@ -10044,6 +10044,9 @@ hr.light {
     color: #737575;
   }
   #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {
+    color: #a82d41;
+  }
+    #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:active {
     color: #a82d41;
   }
 }
