--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,6 +6,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta property="og:url" content="https://goldenlantern.github.io/MIT/" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="MIT Secure Cyber Risk Aggregation and Measurement" />
+<meta property="og:description" content="Cybersecurity benchmarking and ROI analytics without own-data disclosure" />
+<meta property="og:image" content="https://goldenlantern.github.io/MIT/assets/img/scramlogo.png" /> 
 
   <title>MIT Secure Cyber Risk Aggregation and Measurement</title>
   <!-- Favicon-->
