--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,7 +10,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:title" content="MIT Secure Cyber Risk Aggregation and Measurement" />
 <meta property="og:description" content="Cybersecurity benchmarking and ROI analytics without own-data disclosure" />
-<meta property="og:image" content="https://goldenlantern.github.io/MIT/assets/img/scramlogo.png" /> 
+<meta property="og:image" content="https://goldenlantern.github.io/MIT/assets/img/FB.png" /> 
 
   <title>MIT Secure Cyber Risk Aggregation and Measurement</title>
   <!-- Favicon-->
