--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10129,6 +10129,6 @@ header.masthead h1 {
     padding: 20px;
 }
  
- .nav-link:active{
+a.nav-link .js-scroll-trigger:active{
  color:#a82d41;
  }
