--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -162,12 +162,12 @@ sup {
 }
 
 a {
-  color: #f4623a;
+  color: #a82d41;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #d6370c;
+  color: #717372;
   text-decoration: underline;
 }
 
