--- a/_includes/serviceshome.html
+++ b/_includes/serviceshome.html
@@ -17,6 +17,7 @@
 		  <div class="col ">
           <h3 class="h4 mb-2">{{ servicehome.title }}</h3>
 		  <hr class="divider my-4">
+		  {{ servicehome.content }}
           <div class="col">
 		  <ul>
             <li>{{ servicehome.text1 | markdownify }}</li>
