--- a/_includes/serviceshome.html
+++ b/_includes/serviceshome.html
@@ -16,7 +16,7 @@
 
 		  <div class="col ">
           <h3 class="h4 mb-2">{{ servicehome.title }}</h3>
-<p>{{ servicehome.titletxt | markdownify }}</p>
+{{ servicehome.txt | markdownify }}
 
           <div class="col">
 		  <ul>
