--- a/_includes/serviceshome.html
+++ b/_includes/serviceshome.html
@@ -20,7 +20,7 @@
 
 
           <div class="col">
-		  <h4 class="h4 mb-2">{{ servicehome.title }}</h3>
+		  <h4 class="h4 mb-2">{{ servicehome.subtitle }}</h3>
 		  <ul>
             <li>{{ servicehome.text1 | markdownify }}</li>
 			<li>{{ servicehome.text2 | markdownify }}</li>
