--- a/_includes/serviceshome.html
+++ b/_includes/serviceshome.html
@@ -19,10 +19,10 @@
 
 
           <div class="col">
-		  {{ servicehome.text3 | markdownify }}
 		  <ul>
             <li>{{ servicehome.text1 | markdownify }}</li>
 			<li>{{ servicehome.text2 | markdownify }}</li>
+			<li>{{ servicehome.text3 | markdownify }}</li>
            </ul>
           </div>
         </div>
