--- a/_includes/asidehome.html
+++ b/_includes/asidehome.html
@@ -1,7 +1,7 @@
 <section id="{{ section.section_id }}" class="page-section bg-dark text-white {{ section.background_style }}">
   <div class="container text-center">
     <h2 class="mb-4">{{ section.title }}!</h2>
-	<p>M</p>
+	<p>Contact us if you’d like to participate in a computation.</p>
     {% include actions.html actions=section.actions %}
   </div>
 </section>
