--- a/_includes/homeservices.html
+++ b/_includes/homeservices.html
@@ -1,7 +1,7 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6" style="background-color:lavender;">
+<div class="container serviceshomecol">
+  <div class="row row-mid-6">
+    <div class="col-xs-12 col-sm-6" >
       <h3 class="h4 mb-2">Use case: Benchmarking (CISO)</h3>
      <p class=" mb-5">Our benchmarking platform allows firms to privately compare their security defense posture to other firms both within an industry and across the entire market using over 100 security controls.  SCRAM benchmarks allow firms to identify potential gaps in defensive coverage and evaluate the adoption of emerging technologies and defensive strategies.</p>
 	 <h4 class="h5 mb-2"> What you’ll learn:</h4>
