--- a/_includes/homeservices.html
+++ b/_includes/homeservices.html
@@ -10,7 +10,7 @@
 			<li>What are our stronger and weaker points relative to our peers?</li>
            </ul>
     </div>
-    <div class="col-xs-12 col-sm-6" style="background-color:lavenderblush;"><br>
+    <div class="col-xs-12 col-sm-6" ><br>
           <h3 class="h4 mb-2">Use case: Return on investment (CISO, CFO)</h3>
      <p class=" mb-5">SCRAM’s return on investment data helps CISOs and CFOs guide security investments toward security controls with the largest real-world monetary losses resulting from successful attacks. Participating firms receive actionable intelligence and rankings detailing aggregated losses by security control that they can use to target specific security investments.</p>
 	 <h4 class="h5 mb-2"> What you’ll learn:</h4>
