--- a/_includes/homeservices.html
+++ b/_includes/homeservices.html
@@ -1,7 +1,7 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
 <div class="container serviceshomecol">
   <div class="row row-mid-6">
-    <div class="col-xs-12 col-sm-6" >
+    <div class="col-xs-12 col-sm-6 serviceshome" >
       <h3 class="h4 mb-2">Use case: Benchmarking (CISO)</h3>
      <p class=" mb-5">Our benchmarking platform allows firms to privately compare their security defense posture to other firms both within an industry and across the entire market using over 100 security controls.  SCRAM benchmarks allow firms to identify potential gaps in defensive coverage and evaluate the adoption of emerging technologies and defensive strategies.</p>
 	 <h4 class="h5 mb-2"> What you’ll learn:</h4>
@@ -10,8 +10,8 @@
 			<li>What are our stronger and weaker points relative to our peers?</li>
            </ul>
     </div>
-    <div class="col-xs-12 col-sm-6" ><br>
-          <h3 class="h4 mb-2">Use case: Return on investment (CISO, CFO)</h3>
+    <div class="col-xs-12 col-sm-6 serviceshome" ><br>
+      <h3 class="h4 mb-2">Use case: Return on investment (CISO, CFO)</h3>
      <p class=" mb-5">SCRAM’s return on investment data helps CISOs and CFOs guide security investments toward security controls with the largest real-world monetary losses resulting from successful attacks. Participating firms receive actionable intelligence and rankings detailing aggregated losses by security control that they can use to target specific security investments.</p>
 	 <h4 class="h5 mb-2"> What you’ll learn:</h4>
 	 <ul>
