--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -12,7 +12,7 @@
            </ul>
     </div>
     <div class="col-xs-12 col-sm-6 serviceshome" >
-   <img src="assets/img/services/service-1.jpg">
+   <img src="assets/img/services/service-1.jpg" style="width:580px;">
    </div>
   </div>
 </div>
