--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -4,7 +4,7 @@
   <div class="col-xs-12 col-sm-6" >
    <img src="assets/img/services/service-1.jpg" style="width:580px;">
    </div>
-    <div class="col-xs-12 col-sm-6 serviceshome " >
+    <div class="col-xs-12 col-sm-6 " >
       <h3 class="h4 mb-2">Step: Evaluate your security posture</h3>
      <p class=" mb-5">See to benchmark your own security posture using our method</p>
 	 <ul>
