--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -4,10 +4,10 @@
   <div class="col-xs-12 col-sm-6" >
    <img src="assets/img/services/service-1.jpg" style="width:580px;">
    </div>
-    <div class="col-xs-12 col-sm-6  " >
-      <h3 class="h4 mb-2 align-middle">Step: Evaluate your security posture</h3>
-     <p class=" mb-5 align-middle">See to benchmark your own security posture using our method</p>
-	 <ul class="align-middle">
+    <div class="col-xs-12 col-sm-6 participategridright " >
+      <h3 class="h4 mb-2">Step: Evaluate your security posture</h3>
+     <p class=" mb-5">See to benchmark your own security posture using our method</p>
+	 <ul>
             <li>CIS as our basis </li>
 			<li>Easy-to-evaluate (yes/no) questions</li>
 			<li>Template provided</li>
