--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10132,3 +10132,6 @@ header.masthead h1 {
 a.nav-link .js-scroll-trigger:active{
  color:#a82d41;
  }
+ .col-xs-12.col-sm-6.participategridright {
+    padding: 80px 0 0 50px;
+}
