--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -18,3 +18,29 @@
 </div>
 
 </section>
+<section class="bg-participate">
+<div class="container serviceshomecol ">
+  <div class="row row-mid-6">
+    <div class="col-xs-12 col-sm-6 participategridright " >
+      <h3 class="h4 mb-2">Step: Gather our losses and related control failures</h3>
+     <p class=" mb-5">Learn how to calculate monetary losses for your security events</p>
+	 <ul>
+            <li>Why firms need to gather information on their security losses </li>
+			<li>Importance of standardizing the measurements across firms</li>
+			<li>We provide templates and real-time support to help teams at firms calculate their monetary losses</li>
+           </ul>
+		   <p class=" mb-5">Templates: </p>
+		   <ul>
+            <li>Excel</li>
+			<li>CSV</li>
+           </ul>
+    </div>
+	<div class="col-xs-12 col-sm-6" >
+   <img src="assets/img/services/service-1.jpg" style="width:580px;">
+   </div>
+    
+  </div>
+</div>
+
+</section>
+
