--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -21,7 +21,7 @@
 <section class="bg-participate">
 <div class="container serviceshomecol ">
   <div class="row row-mid-6">
-    <div class="col-xs-12 col-sm-6 participategridright " >
+    <div class="col-xs-12 col-sm-6 participategridleft " >
       <h3 class="h4 mb-2">Step: Gather our losses and related control failures</h3>
      <p class=" mb-5">Learn how to calculate monetary losses for your security events</p>
 	 <ul>
