--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10135,3 +10135,10 @@ a.nav-link .js-scroll-trigger:active{
  .col-xs-12.col-sm-6.participategridright {
     padding: 80px 0 0 50px;
 }
+section.bg-participate {
+    background: #c5c7c7;
+    padding: 120px;
+}
+.col-xs-12.col-sm-6.participategridleft {
+    padding: 0px 20px 0 0px;
+}
