--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,7 +12,8 @@
           </li>
         {% endfor %}
       </ul>
-	  
+	  <a class="btn btn-xl btn-nav" href="https://scram.mit.edu/accounts/login/?next=/" target="_blank">Log-in to a computation
+</a>
     </div>
   </div>
 </nav>
