--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -4022,7 +4022,7 @@ input[type=button].btn-block {
 .navbar-collapse {
   flex-basis: 100%;
   flex-grow: 1;
-  align-items: center;
+  align-items: left;
 }
 
 .navbar-toggler {
