--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10142,3 +10142,7 @@ section.bg-participate {
 .col-xs-12.col-sm-6.participategridleft {
     padding: 0px 20px 0 0px;
 }
+div#navbarResponsive {
+    position: relative;
+    right: 320px;
+}
