--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10146,3 +10146,16 @@ div#navbarResponsive {
     position: relative;
     right: 320px;
 }
+a.btn.btn-xl.btn-nav {
+    background: #a82d41;
+    border-radius: 0;
+    padding: 10px 20px;
+    color: #fff;
+}
+a.btn.btn-xl.btn-nav:hover {
+    background: #fff;
+    border-radius: 0;
+    padding: 10px 20px;
+    color: #737575
+	border: 1px solid #a82d41;
+}
