--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10156,6 +10156,6 @@ a.btn.btn-xl.btn-nav:hover {
     background: #fff;
     border-radius: 0;
     padding: 10px 20px;
-    color: #737575
+    color: #737575;
 	border: 1px solid #a82d41;
 }
