--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -1336,8 +1336,8 @@ pre code {
   }
 
   .col-lg-8 {
-    flex: 0 0 66.6666666667%;
-    max-width: 66.6666666667%;
+    flex: 0 0 90%;
+    max-width: 90%;
   }
 
   .col-lg-9 {
