--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -9827,7 +9827,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-white-50 {
-  color: rgba(255, 255, 255,) !important;
+  color: rgba(255, 255, 255) !important;
 }
 
 .text-hide {
