--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -9823,11 +9823,11 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-black-50 {
-  color: rgba(0, 0, 0) !important;
+  color: rgba(0, 0, 0, 0.5) !important;
 }
 
 .text-white-50 {
-  color: rgba(255, 255, 255) !important;
+  color: #fff !important;
 }
 
 .text-hide {
