--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10161,5 +10161,6 @@ a.btn.btn-xl.btn-nav:hover {
 	border: 2px solid #a82d41;
 }
 page-sectioncontact {
-  padding: 0 0 5rem 0;
+  padding-top: 0;
+  padding-bottom: 5rem;
 }
