--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10162,5 +10162,5 @@ a.btn.btn-xl.btn-nav:hover {
 }
 page-sectioncontact {
   padding-top: 0;
-  padding-bottom: 5rem;
+  padding-bottom: 50px;
 }
