--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10161,6 +10161,5 @@ a.btn.btn-xl.btn-nav:hover {
 	border: 2px solid #a82d41;
 }
 page-sectioncontact {
-  padding-top: 0;
-  padding-bottom: 50px;
+  padding: 0 0 50px 0;
 }
