--- a/_includes/homeservices.html
+++ b/_includes/homeservices.html
@@ -1,6 +1,6 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
 <div class="container serviceshomecol">
-<div><iframe width="560" height="315" src="https://www.youtube.com/embed/XHOmBV4js_E?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="text-align:center; padding: 50px 0;"></iframe></div>
+<div><center><iframe width="100%" height="315" src="https://www.youtube.com/embed/XHOmBV4js_E?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="text-align:center; padding: 50px 0;"></iframe></center></div>
   <div class="row row-mid-6">
     <div class="col-xs-12 col-sm-6 serviceshome" >
       <h3 class="h4 mb-2">Use case: Benchmarking (CISO)</h3>
