--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10190,3 +10190,7 @@ a.btn.btn-xl.btn-nav:hover {
 section#contactshome {
     margin-top: -100px;
 }
+header.masthead.pagehead.notmain {
+    padding-top: 12rem;
+    padding-bottom: 10rem;
+}
