--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10191,6 +10191,6 @@ section#contactshome {
     margin-top: -100px;
 }
 header.masthead.pagehead.notmain {
-    padding-top: 12rem;
-    padding-bottom: 10rem;
+    padding-top: 12rem !important;
+    padding-bottom: 10rem !important;
 }
