--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10194,3 +10194,14 @@ header.masthead.pagehead.notmain {
     padding-top: 12rem !important;
     padding-bottom: 10rem !important;
 }
+hr.divider.my-4.hh1 {
+    max-width: 25rem;
+    border-width: 0.2rem;
+    border-color: #a82d41;
+}
+hr.divider.my-4.hh2 {
+    max-width: 32rem;
+    border-width: 0.2rem;
+    border-color: #a82d41;
+}
+
