--- a/_sass/_member-box.scss
+++ b/_sass/_member-box.scss
@@ -8,10 +8,11 @@
         margin-bottom: 0;
     }
     img {
-      width: 80%;
-      height: 80%;
-      object-fit: cover;
-      overflow: hidden;
-      border-radius: 50%;
+		width: 60%;
+		height: 80%;
+		object-fit: cover;
+		overflow: hidden;
+		border-radius: 50%;
+		padding-bottom: 20px;
     }
 }
