--- a/_sass/_member-box.scss
+++ b/_sass/_member-box.scss
@@ -8,9 +8,11 @@
         margin-bottom: 0;
     }
     img {
-
+		width: 60%;
+		height: 60%;
 		object-fit: cover;
 		overflow: hidden;
 		border-radius: 50%;
+
     }
 }
