--- a/_includes/members.html
+++ b/_includes/members.html
@@ -13,5 +13,7 @@
       </div>
       {% endfor %}
     </div>
+	<div class="navbar-right"><a class="btn btn-xl btn-nav" href="/MIT/products">Our Research
+</a></div>
   </div>
 </section>
