--- a/_includes/members.html
+++ b/_includes/members.html
@@ -13,7 +13,7 @@
       </div>
       {% endfor %}
     </div>
-	<div class="navbar-right"><a class="btn btn-xl btn-nav" href="/MIT/products">Our Research
+	<div class="text-centert"><a class="btn btn-xl btn-research" href="/MIT/products">Our Research
 </a></div>
   </div>
 </section>
