--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10205,3 +10205,11 @@ hr.divider.my-4.hh2 {
     border-color: #a82d41;
 }
 
+a.btn.btn-xl.btn-research{
+    background: #a82d41;
+    border-radius: 0;
+    padding: 10px 20px;
+    color: #fff;
+    border: 2px solid #a82d41;
+}
+
