--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,7 +16,7 @@
     </div>
 	<div class="navbar-right"><a class="btn btn-xl btn-nav" href="https://scram.mit.edu/accounts/login/?next=/" target="_blank">Log-in to a computation
 </a></div>
-<div class="navbar-right"><img src="assets/img/ipri-square-socialmedia.png" alt="" style="width:80px;"></a></div>
+<div class="navbar-right nav-2logo"><img src="assets/img/ipri-square-socialmedia.png" alt="" style="width:80px;"></a></div>
   </div>
 </nav>
  
