--- a/_includes/members.html
+++ b/_includes/members.html
@@ -13,7 +13,6 @@
       </div>
       {% endfor %}
     </div>
-	<div class="text-centert"><a class="btn btn-xl btn-research" href="/MIT/products">Our Research
-</a></div>
+	<div class="text-centert"><center><a class="btn btn-xl btn-research" href="/MIT/products">Our Research</a></center></div>
   </div>
 </section>
