--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10212,4 +10212,7 @@ a.btn.btn-xl.btn-research{
     color: #fff;
     border: 2px solid #a82d41;
 }
-
+.bottombtn {
+    padding-top: 70px;
+    padding-bottom: 20px;
+}
