--- a/_includes/technologyservices.html
+++ b/_includes/technologyservices.html
@@ -1,27 +1,27 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
-  <div class="container serviceshomecol">
-    
-    <div class="row row-mid-6 ">
+  <div class="container">
+    <h2 class="text-center mt-0">{{ section.title }}</h2>
+    <hr class="divider my-4">
+    <div class="row justify-content-center">
       <!-- {#% assign cols = section.services.size | at_most: 4 %#} -->
       {% assign cols = section.services.size %}
-      {% if cols > 2 %}
-        {% assign cols = 2 %}
+      {% if cols > 4 %}
+        {% assign cols = 4 %}
       {% endif %}
 
-      {% assign colsL = 6 | divided_by: cols %}
+      {% assign colsL = 12 | divided_by: cols %}
       {% assign colsM = colsL | times: 2 %}
 
       {% for service in section.services %}
-      <div class="col serviceshome">
-
-		  <div class="col ">
+      <div class="col-lg-{{ colsL }} col-md-{{ colsM }} text-center">
+        <div class="mt-5">
+          <i class="fas fa-4x {{ service.icon }} text-primary mb-4"></i>
           <h3 class="h4 mb-2">{{ service.title }}</h3>
-		  <hr class="divider my-4">
-          <div class="col">
-		  <ul>
-            <li>{{ service.text1 | markdownify }}</li>
-			<li>{{ service.text2 | markdownify }}</li>
-           </ul>
+          <div class="text-muted mb-0">
+            {{ service.text | markdownify }}
+            {% if service.url %}
+              <a href="{{ service.url }}"><i class="fas fa-link"></i></a>
+            {% endif %}
           </div>
         </div>
       </div>
