--- a/_includes/technologyservices.html
+++ b/_includes/technologyservices.html
@@ -1,18 +1,10 @@
-<section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
+<section id="{{ section.section_id }}" class="page-section {{ section.background_style }}">
   <div class="container">
-    <h2 class="text-center mt-0">{{ section.title }}</h2>
-    <hr class="divider my-4">
     <div class="row justify-content-center">
-     
-        <div class="mt-5">
-  
-          <div class="text-muted mb-0">
-            {{ technologytxt.text | markdownify }}
-            {
-          </div>
-        </div>
+      <div class="col-lg-8">
+        <div class="text-white-50 mb-4 ">{{ section.text | markdownify }}</div>
       </div>
-      {% endfor %}
     </div>
 
+  </div>
 </section>
