--- a/_includes/members.html
+++ b/_includes/members.html
@@ -3,15 +3,16 @@
     <h2 class="text-center mt-0">{{ section.title }}</h2>
     <hr class="divider my-4">
     <div class="row justify-content-center">
+	{% for action in section.actions %}
       {% for member in section.members %}
       <div class="col-lg-3 col-md-6 text-center">
         <div class="member-box">
           <img class="fa fa-4x text-primary" src="{{ member.image }}" alt="{{ member.title }}"><br /><br />
-          <h3 class="h4 mb-2"><a href="{{ members.url }}">{{ member.title }}</a></h3>
+          <h3 class="h4 mb-2"><a href="{{ action.url }}">{{ member.title }}</a></h3>
           <p class="text-body mb-0">{{ member.text }}</p>
         </div>
       </div>
-      {% endfor %}
+      {% endfor %}{% endfor %}
     </div>
 	<div class="bottombtn"><center><a class="btn btn-xl btn-research" href="/MIT/products">Our Research</a></center></div>
   </div>
