--- a/_includes/members.html
+++ b/_includes/members.html
@@ -3,7 +3,7 @@
     <h2 class="text-center mt-0">{{ section.title }}</h2>
     <hr class="divider my-4">
     <div class="row justify-content-center">
-	{% for action in section.actions %}
+	
       {% for member in section.members %}
       <div class="col-lg-3 col-md-6 text-center">
         <div class="member-box">
@@ -12,7 +12,7 @@
           <p class="text-body mb-0">{{ member.text }}</p>
         </div>
       </div>
-      {% endfor %}{% endfor %}
+      {% endfor %}
     </div>
 	<div class="bottombtn"><center><a class="btn btn-xl btn-research" href="/MIT/products">Our Research</a></center></div>
   </div>
