--- a/_includes/members.html
+++ b/_includes/members.html
@@ -13,6 +13,7 @@
         </div>
       </div>
       {% endfor %}
+	      {% include actions.html actions=section.actions %}
     </div>
 	<div class="bottombtn"><center><a class="btn btn-xl btn-research" href="/MIT/products">Our Research</a></center></div>
   </div>
