--- a/_includes/members.html
+++ b/_includes/members.html
@@ -8,7 +8,7 @@
       <div class="col-lg-3 col-md-6 text-center">
         <div class="member-box">
           <img class="fa fa-4x text-primary" src="{{ member.image }}" alt="{{ member.title }}"><br /><br />
-          <h3 class="h4 mb-2"><a href="{{ member.url }}">{{ member.title }}</a></h3>
+          <h3 class="h4 mb-2"><a href="{{ member.url }}" target="_blank">{{ member.title }}</a></h3>
           <p class="text-body mb-0">{{ member.text }}</p>
         </div>
       </div>
