--- a/_includes/aside-technology.html
+++ b/_includes/aside-technology.html
@@ -1,6 +1,6 @@
 <section id="{{ section.section_id }}" class="page-section bg-dark text-white {{ section.background_style }}">
-  <div class="container text-center">
-    <h2 class="mb-4">{{ section.title }}</h2>
+  <div class="container ">
+    <h2 class="mb-4 text-center">{{ section.title }}</h2>
 	<ul>
 	<li>Each firm individually generates its own key pair, where each key pair contains a public encryption key and a private decryption key.</li>
 	<li>All firms submit their public keys to the server.</li>
