--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -6140,7 +6140,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  background-color: #c5c7c7 !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
