--- a/_includes/aside-technology.html
+++ b/_includes/aside-technology.html
@@ -1,4 +1,4 @@
-<section id="{{ section.section_id }}" class="page-section bg-dark {{ section.background_style }}">
+<section id="{{ section.section_id }}" class="page-section bg-dark {{ section.background_style }}" style="color:#212529;">
   <div class="container ">
     <h2 class="mb-4 text-center">{{ section.title }}</h2>
 	<ol>
