--- a/_includes/securityaside.html
+++ b/_includes/securityaside.html
@@ -1,4 +1,4 @@
-<section id="{{ section.section_id }}" class="page-section bg-dark text-white {{ section.background_style }}" style="color:#c5c7c7;">
+<section id="{{ section.section_id }}" class="page-section bg-dark {{ section.background_style }}" style="color:#c5c7c7;">
   <div class="container">
     
 		<p>The SCRAM computation platform consists of three main elements: a central server, software clients, and a communication network to pass encrypted data between the clients and the server. The central server manages the data collection from the clients and hosts the core cryptographic software that performs only pre-defined and approved computations on the encrypted data. It is also responsible for piecing together and redistributing the joint public key that is used by the clients to encrypt any data for the computation. </p>
