--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -22,10 +22,12 @@
 <div class="container serviceshomecol ">
   <div class="row row-mid-6">
     <div class="col-xs-12 col-sm-6 participategridleft " >
-      <h3 class="h4 mb-2">Step: Gather our losses and related control failures</h3>
-     <p class=" mb-5">Learn how to calculate monetary losses for your security events</p>
+      <h3 class="h4 mb-2">Steps</h3>
 	 <ul>
-            <li>Why firms need to gather information on their security losses </li>
+            <li class="h5">Step 1: Sign up</li>
+			<ul>
+			<li>Contact us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a> to join a computation</li>
+			</ul>
 			<li>Importance of standardizing the measurements across firms</li>
 			<li>We provide templates and real-time support to help teams at firms calculate their monetary losses</li>
            </ul>
